# AI_agent

./: .gitignore  CLAUDE.md  langgraph.json  pyproject.toml  requirements.txt
assistant/: .gitignore  agent.ipynb  ai_writer.ipynb  pyvenv.cfg
clinical/: __init__.py  cli.py  config.py  data.py  gold.py  models.py  prompts.py  render.py  schema.py  validation.py
data/: README.md
graphs/: __init__.py  review_pipeline.py  validation_loop.py
lessons/: 00_run_and_inspect.ipynb  01_single_node.ipynb  04_validation_loop.ipynb  README.md
specs/: 00_run_and_inspect.md  01_single_node.md  02_state_and_reducers.md  03_conditional_routing.md  04_validation_loop.md  05_map_reduce_send.md  06_checkpointing.md  07_human_in_the_loop.md  08_tools_and_exa_search.md  09_streaming.md  10_subgraphs.md  README.md  TEMPLATE.md  review_and_gold.md
workbench/: review.ipynb  review_graph.ipynb  symptoms.ipynb
