[project]
name = "clinical-langgraph-lessons"
version = "0.1.0"
description = "A LangGraph learning curriculum using clinical symptom extraction as the running example."
requires-python = ">=3.11"
dependencies = [
    "langgraph",
    "langchain-core",
    "langchain-openrouter",
    "pydantic>=2",
    "python-dotenv",
    "pandas",
    "jinja2",
    "exa-py",
    # notebook + graph tooling
    "jupyterlab",
    "ipykernel",
    "nbformat",
    "nbstripout",  # strips notebook outputs on commit (keeps transcript text out of git)
    "langgraph-cli[inmem]",  # provides `langgraph dev` for Studio
]

[project.scripts]
random-transcript = "clinical.cli:random_transcript"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clinical", "graphs"]
